# fontra-glyphs

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: pre-commit-autoupdate.yml  pytest.yml
src/fontra_glyphs/: backend.py  utils.py
tests/: test_backend.py  test_read.py  test_utils.py
tests/data/: GlyphsUnitTestSans.glyphs  GlyphsUnitTestSans3.glyphs
tests/data/GlyphsUnitTestSans3.fontra/: font-data.json  glyph-info.csv  kerning.csv
tests/data/GlyphsUnitTestSans3.fontra/glyphs/: A-cy^1.json  A^1.json  Adieresis^1.json  V^1.json  _part.shoulder.json  _part.stem.json  a.json  a.sc.json  adieresis.json  dieresis.json  h.json  m.json  n.json
tests/data/GlyphsUnitTestSans3.glyphspackage/: fontinfo.plist  order.plist
tests/data/GlyphsUnitTestSans3.glyphspackage/glyphs/: A_-cy.glyph  A_.glyph  V_.glyph  a.glyph  h.glyph  m.glyph  n.glyph
tests/data/fontra-glyphs/: A_.json  A_dieresis.json  _part.shoulder.json  _part.stem.json  a.json  a.sc.json  adieresis.json  dieresis.json  h.json  m.json  n.json
